--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -5,5 +5,8 @@
 {% block page_content %}
     <div class="page-header">
         <h1>Hello, {{ name }}!</h1>
+
+        <p>The local date and time is {{ moment(current_time).format('LLLL') }}.</p>
+        <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
     </div>
 {% endblock %}
