--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,7 @@
 {% extends "bootstrap/base.html" %}
 
+{% import "bootstrap/wtf.html" as wtf %}
+
 {% block title %}Flasky{% endblock %}
 
 {% block navbar %}
